[package]
name = "wpilog-polars"
version = "0.1.0"
edition = "2021"
description = "High-performance conversion of WPILog binary data directly to Polars DataFrames"
license = "MIT"

[dependencies]
polars = { version = "0.51.0", features = ["lazy", "parquet", "csv"] }
byteorder = "1.5"
thiserror = "2.0"
rmpv = "1.3"
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "wpilog_bench"
harness = false
