[package]
name = "wpilog-polars"
version = "0.1.0"
edition = "2021"
description = "High-performance conversion of WPILog binary data directly to Polars DataFrames"
license = "MIT"

[dependencies]
polars = { version = "0.51.0", features = ["lazy", "parquet", "csv"] }
byteorder = "1.5"
thiserror = "2.0"
rmpv = "1.3"
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "wpilog_bench"
harness = false

[profile.release]
debug = true
lto = "fat"
codegen-units = 1

[profile.bench]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
